updated with image

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         </nav>
         <hr>
         <article>
+            <img src="vttp_photo.jpg" height="300">
+            <hr>
             <section id="announcement">
                 <h1>Announcement</h1>
                 <ul>
@@ -88,7 +90,9 @@
                 <h1>Resources</h1>
                 <ul>
                     <li><a href="https://github.com/chukmunnlee/vttp_b5_groupb">Chuck's Github Repo</a></li>
+                    <li><a href="https://github.com/darryl1975">Darryl's Github Repo</a></li>
                     <li><a href="https://app.slack.com/client/T07NBPC13M4/C07PJC9DZPH">Slack Channel</a></li>
+
                 </ul>
             </section>
             <hr>
