updated with image updated time

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
         </nav>
         <hr>
         <article>
-            <img src="vttp_photo.jpg" height="300">
+            <img src="vttp_photo.jpg" height="500">
             <hr>
             <section id="announcement">
                 <h1>Announcement</h1>
                 <ul>
+                    <li>Lunch: Chicken was great! Thought it was tofu at first, but never judge a book by its cover</li>
                     <li>Today's breakfast at NUS-ISS was aights</li>
                     <li>Day 07 is on HTML and CSS! :)</li>
                 </ul>
