updated after lunch

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <header>
-            <p>Last Updated: Friday, 18 October, 10:59 am</p>
+            <p>Last Updated: Friday, 18 October, 12:59 am</p>
             <h1>VisaTTP Bulletin Board</h1>
         </header>
 
@@ -22,7 +22,7 @@
         </nav>
         <hr>
         <article>
-            <img src="vttp_photo.jpg" height="500">
+            <img src="vttp_photo.jpg" height="400">
             <hr>
             <section id="announcement">
                 <h1>Announcement</h1>
@@ -61,27 +61,27 @@
                         <h2>Server Side Foundation</h2>
                         <ul>
                             <li>Wk1: Integration (L3)</li>
-                            <li>Wk2: Resilience (L4)</li>
-                            <li>Wk3: Momentum (L4)</li>
-                            <li>Wk4: Momentum (L4)</li> 
+                            <li>Wk2: Integration (L3)</li>
+                            <li>Wk3: Integration (L3)</li>
+                            <li>Wk4: Integration (L3)</li> 
                         </ul>
                     </div>
                     <div class="box">
                         <h2>Persistence and Analytics Fundamentals</h2>
                         <ul>
                             <li>Wk1: Integration (L3)</li>
-                            <li>Wk2: Resilience (L4)</li>
-                            <li>Wk3: Momentum (L4)</li>
-                            <li>Wk4: Momentum (L4)</li> 
+                            <li>Wk2: Integration (L3), Momentum (L4)</li>
+                            <li>Wk3: Resilience (L4)</li>
+                            <li>Wk4: Resilience (L4), Innovation (L3)</li>  
                         </ul>
                     </div>
                     <div class="box">
-                        <h2>Software Development Fundamentals</h2>
+                        <h2>Client Side Foundation</h2>
                         <ul>
-                            <li>Wk1: Integration (L3)</li>
-                            <li>Wk2: Resilience (L4)</li>
-                            <li>Wk3: Momentum (L4)</li>
-                            <li>Wk4: Momentum (L4)</li> 
+                            <li>Wk1: Integrity (L3)</li>
+                            <li>Wk2: Integration (L3)</li>
+                            <li>Wk3: Integration (L3)</li>
+                            <li>Wk4: Integration (L3)</li>
                         </ul>
                     </div>
                 </div>
