--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <section id="announcement">
                 <h1>Announcement</h1>
                 <ul>
-                    <li>Lunch: Chicken was great! Thought it was tofu at first, but never judge a book by its cover</li>
+                    <li>Lunch: Chicken was great! Thought it was tofu at firstr</li>
                     <li>Today's breakfast at NUS-ISS was aights</li>
                     <li>Day 07 is on HTML and CSS! :)</li>
                 </ul>
