--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#announcement">Announcement</a>
             <a href="#assessment">Assessment</a>
             <a href="#classroom">Classroom</a>
-            <a href="#resources">Resources</a>
+            <a href="#resource">Resources</a>
             <a href="#contact">Contact</a>
         </nav>
         <hr>
@@ -99,7 +99,7 @@
             <hr>
             <section id="contact">
                 <h1>Contact</h1>
-                <p>Please let me know if there are any inaccuracies. Drop me an email at aikenonght@gmail.com or chat with me in class</p>
+                <p>Please let me know if there's any inaccuracies. Drop me an email at aikenonght@gmail.com or chat with me in class</p>
             </section>
         </article>
     </div>
