Updated VTTP Bulletin - 6 Nov

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <header>
-            <p>Last Updated: Friday, 18 October, 12:59 am</p>
+            <p>Last Updated: Friday, 6 Nov, 11:13 am</p>
             <h1>VisaTTP Bulletin Board</h1>
         </header>
 
@@ -27,16 +27,16 @@
             <section id="announcement">
                 <h1>Announcement</h1>
                 <ul>
-                    <li>Lunch: Chicken was great! Thought it was tofu at firstr</li>
-                    <li>Today's breakfast at NUS-ISS was aights</li>
-                    <li>Day 07 is on HTML and CSS! :)</li>
+                    <li>We are done with SDF!</li>
+                    <li>A good week of break</li>
+                    <li>Updates: New GPT tutors dropped! Find in <i>Resources</i></li>
                 </ul>
             </section>
             <hr>
             <section id="assessment">
                 <h1>Assessment Dates</h1>
                 <ol>
-                    <li>Assessment 1: Wednesday, 30 October 2024</li>
+                    <li><s>Assessment 1: Wednesday, 30 October 202</s></li>
                     <li>Assessment 2: Friday, 15 December 2024</li>
                     <li>Mid Presentation: 30 December 2024</li>
                     <li>Assessment 3: 13 February 2025</li>
@@ -49,12 +49,12 @@
                 <h1>Classroom Schedule</h1>
                 <div class="topbox">
                     <div class="box">
-                        <h2>Software Development Fundamentals</h2>
+                        <h2><s>Software Development Fundamentals</s></h2>
                         <ul>
-                            <li>Wk1: Integration (L3)</li>
-                            <li>Wk2: Resilience (L4)</li>
-                            <li>Wk3: Momentum (L4)</li>
-                            <li>Wk4: Momentum (L4)</li> 
+                            <li><s>Wk1: Integration (L3)</s></li>
+                            <li><s>Wk2: Resilience (L4)</s></li>
+                            <li><s>Wk3: Momentum (L4)</s></li>
+                            <li><s>Wk4: Momentum (L4)</s></li> 
                         </ul>
                     </div>
                     <div class="box">
@@ -92,8 +92,10 @@
                 <ul>
                     <li><a href="https://github.com/chukmunnlee/vttp_b5_groupb">Chuck's Github Repo</a></li>
                     <li><a href="https://github.com/darryl1975">Darryl's Github Repo</a></li>
+                    <li><a href="https://github.com/kenken64">Kenneth's Github Repo</a></li>
                     <li><a href="https://app.slack.com/client/T07NBPC13M4/C07PJC9DZPH">Slack Channel</a></li>
-
+                    <li><a href="https://chatgpt.com/g/g-GR2H3lkwR-sdf-software-development-foundation-tutor">SDF GPT Tutor <em>(NEW!)</em></a></li>
+                    <li><a href="https://chatgpt.com/g/g-TpqrBPMC0-ssf-sever-side-foundation-tutor">SSF GPT Tutor <em>(NEW!)</em></a></li>
                 </ul>
             </section>
             <hr>
